# dotfiles

./: .Brewfile  .Xdefaults  .bash_profile  .bashrc  .chezmoi.toml.tmpl  .editorconfig  .gitignore  .gvimrc  .ideavimrc  .inputrc  .profile  .spacemacs  .tmux.conf  .vimrc  .wget-hsts  .zshenv  .zshrc  .zshrc_Darwin  .zshrc_Linux  .zshrc_external  AGENTS.md  Brewfile  CLAUDE.md  LICENSE  Makefile  README.md  WORKFLOW.md  cargo-installed.txt  flake.nix  install.sh  pyproject.toml
.config/: .bunfig.toml  (+2 more)
skills/: Makefile  README.md  pyproject.toml
skills/common/: dependencies.json
skills/decompose-plan/tests/: test_split_check_gate.py
skills/design-doc/tests/: test_split_check.py
skills/scripts/: README.md  audit_codex_skills.py  build_skills.py  skills_manifest_refresh.py  skills_mark_managed.py  skills_reconcile.py  structured_templates.py
skills/src/: .syncignore
skills/src/adversarial-verify/: SKILL.md  skill.json
skills/src/audit-agents-md/: SKILL.md
skills/src/commit/: SKILL.md
skills/src/common/: dependencies.json
skills/src/completion-audit/: SKILL.md
skills/src/decompose-plan/: SKILL.md  skill.json
skills/src/design-doc/: SKILL.md  skill.json
skills/src/execute-plan/: SKILL.md  skill.json
skills/src/handover/: SKILL.md
skills/src/setup-ralph/: SKILL.md  skill.json
skills/src/simplify/: SKILL.md
skills/src/triage-review/: SKILL.md
skills/src/workflow/: SKILL.md
skills/tests/: test_build_skills.py  test_skills_models.py  test_structured_templates.py
skills/tools/skit/: .gitignore  AGENTS.md  Makefile  README.md  go.mod  main.go
(+580 files in other folders)
