[project]
name = "dotfiles-skills"
version = "0.0.0"
requires-python = ">=3.13"

[dependency-groups]
dev = [
  "ruff>=0.11.13,<0.12",
  "pytest>=8.4.1,<9",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = [
  "I",
]

[tool.pytest.ini_options]
testpaths = [
  "src",
  "tests",
]
